@@ -4,6 +4,7 @@ Revision history for Petal.
     - Added Cookbook.pod documentation and associated tests from William McKee
     - Removed references to HTML::TreeBuilder and XML::Parser (William McKee)
     - Skip test 071 when URI.pm not installed (William McKee)
+    - Added tests 085 & 086 demonstrating breakage when using {disk,mem} cache and multi-language includes
 
 2.15 Wed Jan  5 15:31:00 2005
     - Fixed some 'used of uninitialized values' warnings
